<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            xmlns:android="http://schemas.android.com/apk/res/android" >
    
            <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_name_here"
                    />
            
        <EditText
                android:id="@+id/etGrNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_gr"
                />
            
        
        <EditText
                android:id="@+id/etYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_passing_year"
                />
        
        
        <Spinner
                android:id="@+id/spExamName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/exam_type"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                />
        
        <EditText
                android:id="@+id/etCollegeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_admitted_college_university_name"
                />
        
        <EditText
                android:id="@+id/etExamScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_exam_score_here"
                />
        
        
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Upload Acceptance Letter image"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                />
        
        <ProgressBar
                android:id="@+id/loadingPb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible"
                />
        
        
        <ImageView
                android:id="@+id/imgAcceptanceLetter"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/add_img"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:layout_margin="8dp"
                />
        
        
        
        <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:textSize="16sp"
                />
        
    </LinearLayout>

</ScrollView>
